test material datepicker

--- a/src/app/modules/example/pages/datepicker/datepicker.component.html
+++ b/src/app/modules/example/pages/datepicker/datepicker.component.html
@@ -41,3 +41,10 @@
         <pre>To: {{ toDate | json }} </pre>
     </div>
 </div>
+<div class="card rounded-0">
+    <div class="card-header">Material DatePicker</div>
+    <div class="card-body">
+        <!-- <input [mdDatepicker]="myDatepicker"> -->
+        <md-datepicker #myDatepicker></md-datepicker>
+    </div>
+</div>
