forRoot in appModule

--- a/src/app/modules/example/pages/card/card.component.html
+++ b/src/app/modules/example/pages/card/card.component.html
@@ -66,3 +66,46 @@
         </div>
     </div>
 </div>
+<div class="card rounded-0">
+    <div class="card-header">按钮卡片</div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-4">
+                <md-card>
+                    <button md-button md-card-image style="padding: 0;">
+                        <img src="assets/image/card/5.jpg" alt="Photo of a Shiba Inu" style="width:100%">
+                    </button>
+                    <md-card-content>
+                        <p>
+                            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+            <div class="col-md-4">
+                <md-card>
+                    <button md-button md-card-image style="padding: 0;">
+                        <img src="assets/image/card/4.jpg" alt="Photo of a Shiba Inu" style="width:100%">
+                    </button>
+                    <md-card-content>
+                        <p>
+                            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+            <div class="col-md-4">
+                <md-card>
+                    <button md-button md-card-image style="padding: 0;">
+                        <img src="assets/image/card/3.jpg" alt="Photo of a Shiba Inu" style="width:100%">
+                    </button>
+                    <md-card-content>
+                        <p>
+                            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
+                        </p>
+                    </md-card-content>
+                </md-card>
+            </div>
+        </div>
+    </div>
+</div>
