--- a/src/dashboard/components/login/login.component.scss
+++ b/src/dashboard/components/login/login.component.scss
@@ -46,12 +46,35 @@ img {
 
 .login-input input {
     height: 100%;
-    width: 320px;
+    width: 380px;
     border-style: none;
-    background-color: transparent;
-    color:black;
+    background-color: transparent !important;
+    color: black;
 }
 
 .login-input span {
     font-size: 20px;
 }
+
+// .login-card {
+//     width:700px;
+//     padding-left: 300px;
+//     margin: auto;
+//     box-shadow: 1px 2px 3px #d7d7d7;
+// }
+// .login-card-left {
+//     height: 100%;
+//     width: 300px;
+//     position: absolute;
+//     left: 0px;
+//     padding: 100px 0px;
+// }
+// .login-window {
+//     height: 100%;
+//     /*background-image: url('/assets/system/login.jpg');*/
+//     background-size: 100% 100%;
+//     background-color: rgb(240, 240, 240);
+// }
+// .card-block{
+//     width: 450px;
+// }
